--- a/actionfigurestore/src/main/resources/application.properties
+++ b/actionfigurestore/src/main/resources/application.properties
@@ -26,3 +26,5 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.data.rest.base-path=/api
